--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,8 +1,7 @@
-/* チャットレイアウト */
 .chat-box {
     width: 100%;
     height: auto;
-    overflow: hidden; /*floatの解除*/
+    overflow: hidden;
     margin-bottom: 20px;
 }
 .chat-face {
@@ -19,16 +18,15 @@
     float: right;
 }
 .chat-hukidashi {
-    display: inline-block; /*コメントの文字数に合わせて可変*/
+    display: inline-block;
     padding: 15px 20px;
     margin-left: 120px;
     margin-top: 8px;
-    /* border: 1px solid gray; ←削除 */
     border-radius: 10px;
-    position: relative; /*追記*/
-    background-color: #D9F0FF; /*追記*/
+    position: relative;
+    background-color: #D9F0FF;
 }
-/* ↓追記↓ */
+
 .chat-hukidashi:after {
     content: "";
     position: absolute;
@@ -47,4 +45,3 @@
 .someone:after {
     border-color: transparent #BCF5A9 transparent transparent;
 }
-/* ↑追記↑ */
